--- a/Makefile.am
+++ b/Makefile.am
@@ -1,26 +1,26 @@
 bin_PROGRAMS = klisp
 klisp_SOURCES = \
-	src/avlmap.c \
-	src/binary.c \
-	src/binary_stream.c
-	src/custom_stream.c \
-	src/eval.c \
-	src/file_stream.c \
-	src/gc.c \
-	src/hashmap.cpp \
-	src/http.c \
-	src/init.c \
-	src/klisp.c \
-	src/native.c\
-	src/package.cpp \
-	src/print.c \
-	src/read.c \
-	src/regex.c \
-	src/sockets.c \
-	src/stream.c \
-	src/symbol.c \
-	src/term.c \
-	src/thread.c \
-	src/tqueue.c \
-	src/treemap.cpp \
-	src/vector.cpp
+	lisp/avlmap.c \
+	lisp/binary.c \
+	lisp/binary_stream.c
+	lisp/custom_stream.c \
+	lisp/eval.c \
+	lisp/file_stream.c \
+	lisp/gc.c \
+	lisp/hashmap.cpp \
+	lisp/http.c \
+	lisp/init.c \
+	lisp/klisp.c \
+	lisp/native.c\
+	lisp/package.cpp \
+	lisp/print.c \
+	lisp/read.c \
+	lisp/regex.c \
+	lisp/sockets.c \
+	lisp/stream.c \
+	lisp/symbol.c \
+	lisp/term.c \
+	lisp/thread.c \
+	lisp/tqueue.c \
+	lisp/treemap.cpp \
+	lisp/vector.cpp
