Finished build porting to GNU autotools

--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,18 @@ Makefile
 Makefile.in
 aclocal.m4
 autom4te.cache/
-
-
+config.log
+config.status
+configure
+include/config.h
+include/config.h.in
+stamp-h1
+lisp/.deps
+lisp/.dirstamp
+*.o
+*~
 TAGS
-*.beam
-*.d
-lisp/obj
-lisp/tests
 lisp/eval_x86_64_linux.c.h
 lisp/eval_x86_32_linux.c.h
+klisp.release
+klisp.debug
