Fixed configure.ac and x86_64 compiler

--- a/configure.ac
+++ b/configure.ac
@@ -20,7 +20,7 @@ AC_PROG_MAKE_SET
 AC_PROG_RANLIB
 
 # Checks LUA
-AX_PROG_LUA
+AX_PROG_LUA([5.1], [], [], [AC_MSG_ERROR([Lua 5.1+ not found])])
 
 # Checks for libraries.
 AC_CHECK_LIB([unistring], [u32_check], [],  [AC_MSG_ERROR([unistring library not found])])
